--- a/platformio.ini
+++ b/platformio.ini
@@ -10,15 +10,13 @@
 
 [platformio]
 name = epd-420
-description = Firmware for nRF51 based 4.2 inch e-paper display
-default_envs = epd_3c, epd_bw
+description = Firmware for nRF5 based 4.2 inch e-paper display
 
 [env]
 platform = https://github.com/h2zero/platform-n-able.git@^1.1.0
 framework = arduino
 platform_packages = 
 	framework-n-able-arduino @ https://github.com/h2zero/n-able-Arduino.git
-board = generic_nrf51822_xxaa
 lib_deps = 
 	h2zero/NimBLE-Arduino@^2.2.1
 	zinggjm/GxEPD2@^1.6.2
@@ -26,15 +24,33 @@ lib_deps =
 build_flags = 
 	-DCONFIG_BT_NIMBLE_ROLE_CENTRAL_DISABLED
 	-DCONFIG_BT_NIMBLE_ROLE_OBSERVER_DISABLED
-	-DCONFIG_BT_NIMBLE_HOST_TASK_STACK_SIZE=2800
 	-DCONFIG_NIMBLE_CPP_LOG_LEVEL=3
 debug_tool = jlink
 upload_protocol = jlink
 monitor_speed = 115200
 
-[env:epd_3c]
+[env:51822_bw_420]
+board = generic_nrf51822_xxaa
 build_flags = 
 	${env.build_flags}
+	-DCONFIG_BT_NIMBLE_HOST_TASK_STACK_SIZE=2800
+	-DGxEPD2_DISPLAY_CLASS=GxEPD2_BW
+	-DGxEPD2_DRIVER_CLASS=GxEPD2_420_M01
+	-DEPD_BS_PIN=13
+	-DEPD_CS_PIN=9
+	-DEPD_DC_PIN=10
+	-DEPD_RST_PIN=11
+	-DEPD_BUSY_PIN=12
+	-DSPI_SCK_PIN=8
+	-DSPI_MOSI_PIN=5
+	-DUART_TX_PIN=6
+	-DWAKEUP_PIN=7
+
+[env:51822_3c_420c]
+board = generic_nrf51822_xxaa
+build_flags = 
+	${env.build_flags}
+	-DCONFIG_BT_NIMBLE_HOST_TASK_STACK_SIZE=2800
 	-DGxEPD2_DISPLAY_CLASS=GxEPD2_3C
 	-DGxEPD2_DRIVER_CLASS=GxEPD2_420c
 	-DEPD_BS_PIN=16
@@ -47,17 +63,18 @@ build_flags =
 	-DUART_TX_PIN=8
 	-DWAKEUP_PIN=9
 
-[env:epd_bw]
+[env:52810_3c_420c]
+board = generic_nrf52810
 build_flags = 
 	${env.build_flags}
-	-DGxEPD2_DISPLAY_CLASS=GxEPD2_BW
-	-DGxEPD2_DRIVER_CLASS=GxEPD2_420_M01
-	-DEPD_BS_PIN=13
-	-DEPD_CS_PIN=9
-	-DEPD_DC_PIN=10
-	-DEPD_RST_PIN=11
-	-DEPD_BUSY_PIN=12
-	-DSPI_SCK_PIN=8
-	-DSPI_MOSI_PIN=5
-	-DUART_TX_PIN=6
-	-DWAKEUP_PIN=7
+	-DMAX_DISPLAY_BUFFER_SIZE=5000
+	-DGxEPD2_DISPLAY_CLASS=GxEPD2_3C
+	-DGxEPD2_DRIVER_CLASS=GxEPD2_420c
+	-DEPD_BS_PIN=2
+	-DEPD_CS_PIN=6
+	-DEPD_DC_PIN=5
+	-DEPD_RST_PIN=4
+	-DEPD_BUSY_PIN=3
+	-DEPD_EN_PIN=7
+	-DSPI_SCK_PIN=19
+	-DSPI_MOSI_PIN=20
